# libtaulop

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  configure~  taulop-0.1.tar.bz2
autom4te.cache/: output.0  output.1  output.2  output.3  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
examples/NBody/: nbody.cpp
examples/ParallelAxBt/: axbt.cpp
examples/colls/: colls.cpp
examples/communicators/: creation.cpp  simple.cpp
examples/p2p/: p2p.cpp
include/: Makefile.am  allgather_rda.hpp  allgather_ring.hpp  allreduce_linear_openmpi.hpp  allreduce_nonoverlap_openmpi.hpp  allreduce_rabenseifner.hpp  allreduce_rda.hpp  allreduce_ring.hpp  allreduce_ring_segm.hpp  alltoall_basic.hpp  alltoall_linear.hpp  alltoall_pairwise.hpp  bcast_binomial.hpp  bcast_binomial_openmpi.hpp  bcast_linear.hpp  coll_params.hpp  collective.hpp  communicator.hpp  computation.hpp  config.h  cost_element.hpp  gather_binomial.hpp  gatherv_binomial.hpp  graph.hpp  graph_collective.hpp  ilist.h  mapping.hpp  process.hpp  reduce_binomial.hpp  reduce_binomial_openmpi.hpp  reduce_linear.hpp  reduce_linear_openmpi.hpp  scatter_binomial.hpp  taulop_concurrent.hpp  taulop_config.h  taulop_cost.hpp  taulop_kernel.hpp  taulop_operator.hpp  taulop_params.hpp  taulop_params_channel.hpp  (+2 more)
params/ciemat/: IB.txt  (+2 more)
src/: Makefile.am  allgather_rda.cpp  allgather_ring.cpp  allreduce_linear_openmpi.cpp  allreduce_nonoverlap_openmpi.cpp  allreduce_rabenseifner.cpp  allreduce_rda.cpp  allreduce_ring.cpp  allreduce_ring_segm.cpp  alltoall_basic.cpp  alltoall_linear.cpp  alltoall_pairwise.cpp  bcast_binomial.cpp  bcast_binomial_openmpi.cpp  bcast_linear.cpp  coll_params.cpp  collective.cpp  communicator.cpp  computation.cpp  cost_element.cpp  gather_binomial.cpp  gatherv_binomial.cpp  graph.cpp  graph_collective.cpp  mapping.cpp  process.cpp  reduce_binomial.cpp  reduce_binomial_openmpi.cpp  reduce_linear.cpp  reduce_linear_openmpi.cpp  scatter_binomial.cpp  taulop_concurrent.cpp  taulop_cost.cpp  taulop_operator copia.cpp  taulop_operator.cpp  taulop_params.cpp  taulop_params_channel.cpp  taulop_sequence.cpp  transmission.cpp
src/.deps/: allgather_rda.Po  allgather_ring.Po  bcast_binomial.Po  bcast_binomial_openmpi.Po  bcast_linear.Po  collective.Po  communicator.Po  gather_binomial.Po  gatherv_binomial.Po  graph.Po  graph_collective.Po  mapping.Po  process.Po  scatter_binomial.Po  taulop_concurrent.Po  taulop_cost.Po  taulop_operator.Po  taulop_params.Po  taulop_params_channel.Po  taulop_sequence.Po  transmission.Po
taulop_lib/: ChangeLog.txt  Install.txt
taulop_lib/kernel/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  Readme.txt  allgather_rda.cpp  allgather_rda.lo  allgather_ring.cpp  allgather_ring.lo  bcast_binomial.cpp  bcast_binomial.lo  bcast_binomial_openmpi.lo  bcast_linear.cpp  bcast_linear.lo  collective.hpp  collective.lo  communicator.hpp  communicator.lo  config.status  configure  configure.ac  gather_binomial.lo  gatherv_binomial.lo  libtaulop.la  libtool  mapping.cpp  mapping.hpp  mapping.lo  process.cpp  process.lo  scatter_binomial.lo  taulop_concurrent.cpp  taulop_concurrent.hpp  taulop_concurrent.lo  taulop_cost.lo  taulop_operator.cpp  taulop_operator.hpp  taulop_operator.lo  taulop_params.cpp  (+8 more)
taulop_lib/kernel/.deps/: allgather_rda.Plo  allgather_ring.Plo  bcast_binomial.Plo  bcast_binomial_openmpi.Plo  bcast_linear.Plo  collective.Plo  communicator.Plo  gather_binomial.Plo  gatherv_binomial.Plo  mapping.Plo  process.Plo  scatter_binomial.Plo  taulop_concurrent.Plo  taulop_cost.Plo  taulop_operator.Plo  taulop_params.Plo  taulop_params_channel.Plo  taulop_sequence.Plo  transmission.Plo
taulop_lib/kernel/.libs/: libtaulop.la  libtaulop.lai  libtaulop.so.0  libtaulop.so.0.0.0
taulop_lib/kernel/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
taulop_user/: ._taulop_user.xcodeproj  ChangeLog.txt
tests/: .gitignore  Makefile  Makefile.am  Makefile.in
tests/NBody/: nbody.cpp
tests/ParallelAxBt/: axbt.cpp
tests/Suara/: allreduce.cpp  suara2d_grid.cpp  suara2d_grid_map.cpp  suara2d_script.sh  suara3d_grid.cpp  suara3d_grid_map.cpp  suara3d_script.sh
tests/Wave2D/: wave2d.cpp
tests/basics/colls/: allgather.cpp  allreduce.cpp  alltoall.cpp  bcast.cpp  colls.cpp  gather.cpp  reduce.cpp  scatter.cpp
tests/basics/communicators/: creation.cpp
tests/basics/computation/: computation.cpp
tests/basics/p2p/: p2p.cpp
tests/colls/: .colls.cpp.icloud  colls.cpp
tests/communicators/: creation.cpp  simple.cpp
tests/imb/: allreduce.cpp  benchmark.cpp  benchmark.h  benchs.h  broadcast.cpp  imb_taulop.cpp  pingpong.cpp  reduce.cpp
tests/imb/compare/: imb_compare.ipynb  imb_compare.py  imb_compare_script.py
tests/tests/NBody/NBody.xcodeproj/: project.pbxproj
tests/tests/NBody/NBody.xcodeproj/xcuserdata/jarico.xcuserdatad/xcschemes/: NBody.xcscheme  xcschememanagement.plist
tests/tests/ParallelAxBt/ParallelAxBt.xcodeproj/xcuserdata/jarico.xcuserdatad/xcschemes/: ParallelAxBt.xcscheme  xcschememanagement.plist
tests/tests/Wave2D/Wave2D.xcodeproj/: project.pbxproj
tests/tests/communicators/communicators.xcodeproj/xcuserdata/jarico.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/tests/test_colls/test_colls/: main.cpp
tests/tests/test_colls/test_colls.xcodeproj/project.xcworkspace/xcuserdata/jarico.xcuserdatad/: UserInterfaceState.xcuserstate
tests/tests/test_colls/test_colls.xcodeproj/xcuserdata/jarico.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/tests/test_p2p/test_p2p.xcodeproj/: project.pbxproj
tests/tests/test_p2p/test_p2p.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/tests/test_p2p/test_p2p.xcodeproj/project.xcworkspace/xcuserdata/jarico.xcuserdatad/: UserInterfaceState.xcuserstate
tests/tests/test_p2p/test_p2p.xcodeproj/xcuserdata/jarico.xcuserdatad/xcschemes/: test_p2p.xcscheme
tests/utils/: args.cpp  args.h
(+302 files in other folders)
