AC_INIT([taulop], [0.1], [jarico@unex.es])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([1.09 subdir-objects tar-ustar dist-bzip2 foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
AM_PROG_CC_C_O

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
#AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

