
libtaulop_a_HEADERS += config.h \
  include/taulop_config.h \
  include/process.hpp \
  include/taulop_cost.hpp \
  include/transmission.hpp \
  include/taulop_kernel.hpp \
  include/taulop_params.hpp \
  include/taulop_operator.hpp \
  include/taulop_sequence.hpp \
  include/taulop_concurrent.hpp \
  include/taulop_params_channel.hpp \
  include/mapping.hpp \
  include/collective.hpp \
  include/bcast_linear.hpp \
  include/communicator.hpp \
  include/allgather_rda.hpp \
  include/allgather_ring.hpp \
  include/bcast_binomial.hpp \
  include/gather_binomial.hpp \
  include/gatherv_binomial.hpp \
  include/scatter_binomial.hpp \
  include/bcast_binomial_openmpi.hpp \
  include/graph.hpp \
  include/graph_collective.hpp \
  include/reduce_linear.hpp \
  include/computation.hpp



