
libtaulop_a_SOURCES += src/process.cpp \
  src/taulop_cost.cpp \
  src/transmission.cpp \
  src/taulop_params.cpp \
  src/taulop_operator.cpp \
  src/taulop_sequence.cpp \
  src/taulop_concurrent.cpp \
  src/taulop_params_channel.cpp \
  src/mapping.cpp \
  src/collective.cpp \
  src/bcast_linear.cpp \
  src/communicator.cpp \
  src/allgather_rda.cpp \
  src/allgather_ring.cpp \
  src/bcast_binomial.cpp \
  src/gather_binomial.cpp \
  src/gatherv_binomial.cpp \
  src/scatter_binomial.cpp \
  src/bcast_binomial_openmpi.cpp \
  src/graph.cpp \
  src/graph_collective.cpp \
  src/reduce_linear.cpp \
  src/computation.cpp \
  src/cost_element.cpp



