lib_LTLIBRARIES = libtaulop.la

include_HEADERS = \
  ilist.h \
  config.h \
  config_taulop.h \
  process.hpp \
  taulop_cost.hpp \
  transmission.hpp \
  taulop_kernel.hpp \
  taulop_params.hpp \
  taulop_operator.hpp \
  taulop_sequence.hpp \
  taulop_concurrent.hpp \
  taulop_params_channel.hpp \
  mapping.hpp \
  collective.hpp \
  bcast_linear.hpp \
  communicator.hpp \
  allgather_rda.hpp \
  allgather_ring.hpp \
  bcast_binomial.hpp \
  gather_binomial.hpp \
  gatherv_binomial.hpp \
  scatter_binomial.hpp \
  bcast_binomial_openmpi.hpp

libtaulop_la_SOURCES = \
  process.cpp \
  taulop_cost.cpp \
  transmission.cpp \
  taulop_params.cpp \
  taulop_operator.cpp \
  taulop_sequence.cpp \
  taulop_concurrent.cpp \
  taulop_params_channel.cpp \
  mapping.cpp \
  collective.cpp \
  bcast_linear.cpp \
  communicator.cpp \
  allgather_rda.cpp \
  allgather_ring.cpp \
  bcast_binomial.cpp \
  gather_binomial.cpp \
  gatherv_binomial.cpp \
  scatter_binomial.cpp \
  bcast_binomial_openmpi.cpp


